fix overflow-y

--- a/src/components/Sider/sider.less
+++ b/src/components/Sider/sider.less
@@ -2,7 +2,7 @@
 
 .sider {
   position: fixed;
-  overflow-y: scroll;
+  // overflow-y: auto;
   padding-top: 56px;
   float: left;
   width: @sider-width;
